packages/svelte/tests/compiler-errors/samples/else-before-closing-2/_config.js
import { test } from '../../test';

export default test({
	error: {
		code: 'invalid-else-placement',
		message: 'Expected to close {#await} block before seeing {:else} block',
		position: [29, 29]
	}
});
